fix mobile horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+html{
+  overflow-x: hidden;
+}
 body {
   margin: 0;
+  overflow-x: hidden;
+  position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
